--- a/eeg_analyzer.ipynb
+++ b/eeg_analyzer.ipynb
@@ -54,8 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View edf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3023/13259746.py:1: RuntimeWarning: Channel names are not unique, found duplicates for: {'T8-P8'}. Applying running numbers for duplicates.\n",
+      "/tmp/ipykernel_3883/13259746.py:1: RuntimeWarning: Channel names are not unique, found duplicates for: {'T8-P8'}. Applying running numbers for duplicates.\n",
       "  raw = mne.io.read_raw_edf(\"training_data/chb02_01.edf\", preload=True)\n"
      ]
     }
@@ -539,6 +546,13 @@
    ],
    "source": [
     "raw_filtered.plot(scalings='auto', show=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backbone"
    ]
   },
   {
@@ -13030,7 +13044,7 @@
     "\n",
     "\n",
     "# Training loop with val and logging\n",
-    "n_epochs = 10\n",
+    "n_epochs = 5\n",
     "for epoch in range(n_epochs):\n",
     "    backbone.train()\n",
     "    train_loss, train_z_std, train_diag = compute_epoch(epoch, train_loader, train=True)\n",
@@ -13084,18 +13098,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<decorator-gen-472>:4: FutureWarning: NOTE: EEGNetv4() is a deprecated class. `EEGNetv4` was renamed to `EEGNet` in v1.12; this alias will be removed in v1.14..\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Head\n",
     "# load backbone\n",
@@ -13142,7 +13155,11 @@
     "        self.samples, self.labels = [], []\n",
     "        for f, y in zip(file_list, labels):\n",
     "            raw = mne.io.read_raw_edf(f, preload=True)\n",
-    "            data = raw.get_data()\n",
+    "            # select only chanells above (for datasets with different channels)\n",
+    "            raw.pick(needed_channels)\n",
+    "            # filter raw record, return some numpy obj\n",
+    "            data = get_filtered_data(raw)\n",
+    "            \n",
     "            for start in range(0, data.shape[1]-window_size, window_size):\n",
     "                segment = data[:, start:start+window_size]\n",
     "                self.samples.append(segment.astype(np.float32))\n",
